build_settings.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE

> Task :app:processDebugMainManifest
package="com.mycashbook.app" found in source AndroidManifest.xml: C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\AndroidManifest.xml.
Setting the namespace via the package attribute in the source AndroidManifest.xml is no longer supported, and the value is ignored.
Recommendation: remove package="com.mycashbook.app" from the source AndroidManifest.xml: C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\AndroidManifest.xml.

> Task :app:processDebugManifest
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:l8DexDesugarLibDebug UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:processDebugManifestForPackage
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac FAILED
.\gradlew.bat : C:\Users\Pankaj\AndroidStudioProj
ects\MyCashBook\app\src\main\java\com\mycashbook\
app\ui\settings\SettingsActivity.java:111: 
error: package com.google.firebase.auth does not 
exist
At line:1 char:1
+ .\gradlew.bat assembleDebug 2>&1 | Out-File 
-FilePath build_settings. ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecifie    d: 
(C:\Users\Pankaj... does not exist    :String) 
[], RemoteException
    + FullyQualifiedErrorId : NativeComma    
ndError
 
            
com.google.firebase.auth.FirebaseUser 
currentUser = com.google.firebase.auth.FirebaseAu
th.getInstance()
                                    ^
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\
app\src\main\java\com\mycashbook\app\ui\settings\
SettingsActivity.java:111: error: package 
com.google.firebase.auth does not exist
            
com.google.firebase.auth.FirebaseUser 
currentUser = com.google.firebase.auth.FirebaseAu
th.getInstance()
                                                 
                                       ^
Note: Some input files use or override a 
deprecated API.
Note: Recompile with -Xlint:deprecation for 
details.
Note: Some input files use unchecked or unsafe 
operations.
Note: Recompile with -Xlint:unchecked for 
details.
2 errors

[Incubating] Problems report is available at: file:///C:/Users/Pankaj/AndroidStudioProjects/MyCashBook/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task 
':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output 
below.
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBoo
k\app\src\main\java\com\mycashbook\app\ui\setting
s\SettingsActivity.java:111: error: package 
com.google.firebase.auth does not exist
              
com.google.firebase.auth.FirebaseUser 
currentUser = com.google.firebase.auth.FirebaseAu
th.getInstance()
                                      ^
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBoo
k\app\src\main\java\com\mycashbook\app\ui\setting
s\SettingsActivity.java:111: error: package 
com.google.firebase.auth does not exist
              
com.google.firebase.auth.FirebaseUser 
currentUser = com.google.firebase.auth.FirebaseAu
th.getInstance()
                                                 
                                         ^
  Note: Some input files use or override a 
deprecated API.
  Note: Recompile with -Xlint:deprecation for 
details.
  Note: Some input files use unchecked or unsafe 
operations.
  Note: Recompile with -Xlint:unchecked for 
details.
  2 errors

* Try:
> Check your code and dependencies to fix the 
compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 2s
29 actionable tasks: 5 executed, 24 up-to-date
